--- a/TripTrove/Client/Pages/Index.razor
+++ b/TripTrove/Client/Pages/Index.razor
@@ -1,52 +1,55 @@
 ﻿@page "/"
 @inject IJSRuntime js
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Trip Trove</PageTitle>
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">triptrove</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#about">Travel</a>
+            <a href="#services">Travel Guides</a>
+            <a href="#portfolio">Destination</a>
+            <a href="#">Login</a>
+            <a href="#">Sign Up</a>
         </nav>
     </header>
 
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, It's me</h3>
-            <h1>Ryan Vernados</h1>
-            <h3>And I'm a <span>Frontend Developer</span></h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquam, modi aspernatur placeat architecto amet laudantium id.</p>
-            <div class="social-media">
+            <h1>It's time to</h1>
+            <h1><span class="multiple-text"></span></h1>
+            <h3>your trip with us</h3>
+            <p>Create and arrange your travel plans with a complimentary app crafted for holiday itineraries</p>
+            <!--<div class="social-media">
                 <a href=""><i class='bx bxl-facebook'></i></a>
                 <a href=""><i class='bx bxl-instagram'></i></a>
                 <a href=""><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            -->
+            <div class="social-media"></div>
+            <a href="#" class="btn">Start planning</a>
         </div>
 
 
         <div class="home-img">
-            <img src="images/home.png" alt="" />
+            <img src="images/home_travel.jpg" alt="" />
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/about.png" alt="" />
+            <img src="images/home_travel.png" alt="" />
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend Developer!</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Create and arrange your travel plans with a complimne</p>
 
             <a href="#" class="btn">Read More</a>
         </div>
@@ -80,57 +83,57 @@
     </section>
 
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Project</span></h2>
+        <h2 class="heading">Discover your next <span>Destination</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="" />
+                <img src="images/france.jpg" alt="" />
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>France</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="" />
+                <img src="images/italy.jpg" alt="" />
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Italy</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="" />
+                <img src="images/japan.jpg" alt="" />
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Japan</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="" />
+                <img src="images/newzealand.jpg" alt="" />
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>New Zealand</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio5.jpg" alt="" />
+                <img src="images/santorini.jpg" alt="" />
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Greece</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="" />
+                <img src="images/themaldives.jpg" alt="" />
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>The Maldives</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
@@ -190,6 +193,10 @@
         if (render)
         {
             await js.InvokeVoidAsync("initialiseScrollAnimations");
+            await js.InvokeVoidAsync("initialiseStickyNavBar");
+            await js.InvokeVoidAsync("initialiseToggleIconNavBar");
+            await js.InvokeVoidAsync("initialiseScrollReveal");
+            await js.InvokeVoidAsync("initialiseTypedJs");
         }
     }
 
