Update the landing page

--- a/TripTrove/Client/Pages/Index.razor
+++ b/TripTrove/Client/Pages/Index.razor
@@ -18,7 +18,7 @@
     </header>-->
     <AuthorizeView>
         <NotAuthorized>
-    <section class="home" id="home">
+    <section class="home background-withcolor" id="home">
         <div class="home-content">
             <h1>It's time to</h1>
             <h1><span class="multiple-text"></span></h1>
@@ -55,7 +55,7 @@
         
     </section>
 
-    <section class="services" id="services">
+    <section class="services" id="services" style="background-image: url(images/gray-bg.jpg)">
         <h2 class="heading">Our <span>Services</span></h2>
 
         <div class="services-container">
