--- a/TripTrove/Client/Pages/Index.razor.css
+++ b/TripTrove/Client/Pages/Index.razor.css
@@ -11,8 +11,7 @@
 }
 
 body {
-    background: #1f242d;
-    color: #fff;
+    color: #031927;
 }
 
 
@@ -83,6 +82,7 @@ section {
 .home-img img{
     width: 35vw;
     animation: floatImage 4s ease-in-out infinite;
+    z-index: 100;
 }
 
 @keyframes floatImage {
@@ -114,6 +114,66 @@ home-content h3:nth-of-type(2) {
     margin-bottom: 1rem;
 }
 
+.background-withcolor {
+    background-image: -moz-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
+    background-image: -webkit-linear-gradient(-45deg, rgb(54, 209, 220) 10%, rgb(91, 134, 229) 80%);
+    background-image: -ms-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
+}
+
+.home {
+    position: relative;
+}
+
+    .home:after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: 0;
+        border-right: 100vw solid #fff;
+        border-top: 200px solid transparent;
+        width: 0;
+        z-index: 0;
+    }
+
+    .home .content-bottom {
+        padding-top: 200px;
+        position: relative;
+        z-index: 1;
+    }
+
+        .home .content-bottom h2 {
+            font-size: 90px;
+            font-weight: 700;
+            color: #fff;
+            text-transform: uppercase;
+            line-height: 90px;
+        }
+
+        .home .content-bottom p {
+            color: #fff;
+            max-width: 400px;
+        }
+
+@media (max-width: 1366px) {
+    .home .content-bottom {
+        padding-top: 170px;
+    }
+}
+
+@media (min-width: 992px) {
+    .home .content-bottom img {
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 768px) {
+    .home .content-bottom h2 {
+        font-size: 60px;
+        line-height: 60px;
+    }
+}
 
 span {
     color: #0ef;
@@ -163,7 +223,6 @@ span {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    background: #323946
 }
 
 .about img {
