--- a/TripTrove/Client/Pages/Index.razor
+++ b/TripTrove/Client/Pages/Index.razor
@@ -32,7 +32,7 @@
             <a href="#" class="btn">Start planning</a>
         </div>
 
-
+        <h1>Dead</h1>
         <div class="home-img">
             <img src="images/home_travel.jpg" alt="" />
         </div>
