Improve landing page responsiveness

--- a/TripTrove/Client/Pages/Index.razor.css
+++ b/TripTrove/Client/Pages/Index.razor.css
@@ -223,6 +223,7 @@ span {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    color: #303952;
 }
 
 .about img {
@@ -292,12 +293,14 @@ span {
 
 
 .portfolio {
-    background: #323946;
+    background: white;
+    
 }
 
-.portfolio h2 {
-    margin-bottom: 4rem;
-}
+    .portfolio h2 {
+        margin-bottom: 4rem;
+        color: #031927;
+    }
 
 .portfolio-container {
     display: grid;
@@ -580,3 +583,81 @@ span {
 }
 */
 
+.review {
+    
+}
+
+.review-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.review .card {
+    border-radius: 1rem;
+    box-shadow: 0px -10px 0px rgb(151, 248, 6);
+}
+
+@media(max-width:767px) {
+    .card {
+        margin: 1rem 0.7rem 1rem;
+        max-width: 80vw;
+    }
+}
+.card-image {
+    background-color: #f3f4f5;
+}
+
+.card-image img {
+    width: 6.2rem;
+    border-radius: 5rem;
+    margin: 1.3rem auto 1rem auto;
+}
+
+.col-md-4 {
+    padding: 0 0.5rem;
+}
+
+.card-title {
+    font-size: 1rem;
+    margin-bottom: 0;
+    font-weight: bold;
+    font-family: 'IM Fell French Canon SC';
+}
+
+.card-text {
+    background-color: #f3f4f5;
+    text-align: center;
+    padding: 1rem 2rem;
+    font-size: 0.8rem;
+    color: rgb(82, 81, 81);
+    line-height: 1.4rem;
+}
+
+.card .footer {
+    display: flex;
+    flex-direction: column;
+    border-top: none;
+    text-align: center;
+    line-height: 1.2rem;
+    padding: 2rem 0 1.4rem 0;
+    font-family: 'Varela Round';
+}
+
+#name {
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
+#position {
+    font-size: 0.7rem;
+}
+
+a {
+    color: rgb(151, 248, 6);
+    font-weight: bold;
+}
+
+    a:hover {
+        color: rgb(151, 248, 6);
+    }
