--- a/TripTrove/Client/Shared/NavBar.razor
+++ b/TripTrove/Client/Shared/NavBar.razor
@@ -4,7 +4,7 @@
 
     <nav class="navbar">
         <a href="#home" class="active">Home</a>
-        <a href="#about">Travel</a>
+        <a href="hello">Travel</a>
         <a href="#services">Travel Guides</a>
         <a href="#portfolio">Destination</a>
         <a href="authentication/login">Login</a>
