--- a/TripTrove/Client/Pages/Index.razor
+++ b/TripTrove/Client/Pages/Index.razor
@@ -31,20 +31,77 @@
             -->
             <a href="#" class="btn">Start planning</a>
         </div>
-
-    
         <div class="home-img">
             <img src="images/home_travel.jpg" alt="" />
         </div>
     </section>
 
-    <section class="about" id="about">
-        <div class="about-img">
-            <img src="images/home_travel.png" alt="" />
+
+    <section class="review" id="review">
+        <div class="review-content">
+        <div class="col-md-4">
+            <div class="card d-flex mx-auto">
+                <div class="card-image">
+                    <img class="img-fluid d-flex mx-auto" src="https://i.imgur.com/Uz4FjGZ.jpg">
+                </div>
+                <div class="card-text">
+                    <div class="card-title">Lorem Ipsum!</div>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                    Aenean massa. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
+                    Maecenas nec odio et ante tincidunt tempus
+                    Duis leo. Donec sodales sagittis magna
+                </div>
+                <div class="footer">
+                    <span id="name">Angellia Miller<br></span>
+                    <span id="position">CEO of <a href="#">Facebook.com</a></span>
+                </div>
+            </div>
         </div>
+        <div class="col-md-4">
+            <div class="card d-flex mx-auto">
+                <div class="card-image">
+                    <img class="img-fluid d-flex mx-auto" src="https://i.imgur.com/3TlwnLF.jpg">
+                </div>
+                <div class="card-text">
+                    <div class="card-title">Lorem Ipsum!</div>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                    Aenean massa. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
+                    Maecenas nec odio et ante tincidunt tempus
+                    Duis leo. Donec sodales sagittis magna
+                </div>
+                <div class="footer">
+                    <span id="name">Micheal Smith<br></span>
+                    <span id="position">CEO of <a href="#">Google.com</a></span>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card d-flex mx-auto ">
+                <div class="card-image">
+                    <img class="img-fluid d-flex mx-auto" src="https://i.imgur.com/udGH5tO.jpg">
+                </div>
+                <div class="card-text">
+                    <div class="card-title">Lorem Ipsum!</div>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                    Aenean massa. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
+                    Maecenas nec odio et ante tincidunt tempus
+                    Duis leo. Donec sodales sagittis magna
+                </div>
+                <div class="footer">
+                    <span id="name">Christina Williams<br></span>
+                    <span id="position">UX Designer at <a href="#">Youtube.com</a></span>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!--Second Section-->
+
+    <section class="about" id="about">
 
         <div class="about-content">
-            <h2 class="heading">Test <span>Me</span></h2>
+            <h2 class="heading">What travelers are raving about</h2>
             <h3>A Text</h3>
             <p>Create and arrange your travel plans with a complimne</p>
 
@@ -155,6 +212,17 @@
             <input type="submit" value="Send Message" class="btn" />
         </form>
     </section>
+    <section class="about" id="about">
+
+        <div class="about-content">
+            <h3>Ready to plan your trip in half the time?</h3>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+    </section>
+    
+
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by Ryan | All Rights Reserved.</p>
@@ -162,7 +230,7 @@
         <div class="footer-iconTop">
             <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
         </div>
-        </footer>
+    </footer>
         
     <script>
         function BlazorScrollToId(id) {
