Updating landing page

--- a/TripTrove/Client/Pages/Index.razor
+++ b/TripTrove/Client/Pages/Index.razor
@@ -38,7 +38,9 @@
 
 
     <section class="review" id="review">
+        <h2 class="heading">What travelers are raving about</h2>
         <div class="review-content">
+            
         <div class="col-md-4">
             <div class="card d-flex mx-auto">
                 <div class="card-image">
@@ -46,12 +48,9 @@
                 </div>
                 <div class="card-text">
                     <div class="card-title">Lorem Ipsum!</div>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-                    Aenean massa. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
-                    Maecenas nec odio et ante tincidunt tempus
-                    Duis leo. Donec sodales sagittis magna
+                        So much easier to visualize and plan a road trip to my favourite rock climbing destinations and explore the area around.
                 </div>
-                <div class="footer">
+                <div class="card-footer">
                     <span id="name">Angellia Miller<br></span>
                     <span id="position">CEO of <a href="#">Facebook.com</a></span>
                 </div>
@@ -64,12 +63,9 @@
                 </div>
                 <div class="card-text">
                     <div class="card-title">Lorem Ipsum!</div>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-                    Aenean massa. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
-                    Maecenas nec odio et ante tincidunt tempus
-                    Duis leo. Donec sodales sagittis magna
+                        Very intuitive and simple while still providing a bunch of features, like photos on the destinations, descriptions and suggestions for nearby places to visit.
                 </div>
-                <div class="footer">
+                    <div class="card-footer">
                     <span id="name">Micheal Smith<br></span>
                     <span id="position">CEO of <a href="#">Google.com</a></span>
                 </div>
@@ -82,22 +78,23 @@
                 </div>
                 <div class="card-text">
                     <div class="card-title">Lorem Ipsum!</div>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-                    Aenean massa. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
-                    Maecenas nec odio et ante tincidunt tempus
-                    Duis leo. Donec sodales sagittis magna
+                        I really like how user friendly it is and the auto-save. I also enjoy being able to look at trips that others have planned for inspiration.
                 </div>
-                <div class="footer">
+                <div class="card-footer">
                     <span id="name">Christina Williams<br></span>
                     <span id="position">UX Designer at <a href="#">Youtube.com</a></span>
                 </div>
             </div>
         </div>
+            
+        </div>
+        <div class="card-read-more">
+            <a href="#" class="btn">Read More</a>
         </div>
     </section>
 
     <!--Second Section-->
-
+    <!--
     <section class="about" id="about">
 
         <div class="about-content">
@@ -109,7 +106,7 @@
         </div>
         
     </section>
-
+    -->
     <section class="services" id="services" style="background-image: url(images/gray-bg.jpg)">
         <h2 class="heading">Our <span>Services</span></h2>
 
@@ -195,7 +192,7 @@
 
         </div>
     </section>
-
+    <!--
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
@@ -212,11 +209,10 @@
             <input type="submit" value="Send Message" class="btn" />
         </form>
     </section>
-    <section class="about" id="about">
-
+    -->
+    <section class="about" id="about" style="background-image: url(images/gray-bg.jpg)">
         <div class="about-content">
             <h3>Ready to plan your trip in half the time?</h3>
-
             <a href="#" class="btn">Read More</a>
         </div>
 
