--- a/TripTrove/Client/Pages/Index.razor.css
+++ b/TripTrove/Client/Pages/Index.razor.css
@@ -22,7 +22,7 @@ html {
 
 
 section {
-    min-height: 100vh;
+    min-height: 90vh;
     padding: 10rem 9% 2rem;
 }
 
@@ -55,7 +55,6 @@ section {
 .navbar a {
     font-size: 1.7rem;
     margin-left: 4rem;
-    text-decoration: none;
 }
 
 .navbar a:hover,
@@ -116,7 +115,7 @@ home-content h3:nth-of-type(2) {
 
 .background-withcolor {
     background-image: -moz-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
-    background-image: -webkit-linear-gradient(-45deg, rgb(54, 209, 220) 10%, rgb(91, 134, 229) 80%);
+    background-image: -webkit-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
     background-image: -ms-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
 }
 
@@ -583,8 +582,9 @@ span {
 }
 */
 
-.review {
-    
+.review h2 {
+    color: rgb(82, 81, 81);
+    margin-bottom: 2rem;
 }
 
 .review-content {
@@ -595,7 +595,7 @@ span {
 
 .review .card {
     border-radius: 1rem;
-    box-shadow: 0px -10px 0px rgb(151, 248, 6);
+    box-shadow: 0px -10px 0px rgb(54, 209,220);
 }
 
 @media(max-width:767px) {
@@ -634,7 +634,8 @@ span {
     line-height: 1.4rem;
 }
 
-.card .footer {
+.card-footer {
+    background-image: linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
     display: flex;
     flex-direction: column;
     border-top: none;
@@ -642,6 +643,14 @@ span {
     line-height: 1.2rem;
     padding: 2rem 0 1.4rem 0;
     font-family: 'Varela Round';
+}
+
+.card-read-more {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-top: 2rem;
+
 }
 
 #name {
