Update landing page

--- a/TripTrove/Client/Pages/Index.razor
+++ b/TripTrove/Client/Pages/Index.razor
@@ -28,8 +28,8 @@
                 <a href=""><i class='bx bxl-instagram'></i></a>
                 <a href=""><i class='bx bxl-linkedin'></i></a>
             </div>
-            -->
-            <a href="#" class="btn">Start planning</a>
+            
+            <a href="#" class="btn" style="z-index:100">Start planning</a>-->
         </div>
         <div class="home-img">
             <img src="images/home_travel.jpg" alt="" />
@@ -51,8 +51,8 @@
                         So much easier to visualize and plan a road trip to my favourite rock climbing destinations and explore the area around.
                 </div>
                 <div class="card-footer">
-                    <span id="name">Angellia Miller<br></span>
-                    <span id="position">CEO of <a href="#">Facebook.com</a></span>
+                    <span id="name">Lydia Yang<br></span>
+                    <span id="position">Founder of <a href="#">LydiaScapes Aventure Blog</a></span>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
                 </div>
                     <div class="card-footer">
                     <span id="name">Micheal Smith<br></span>
-                    <span id="position">CEO of <a href="#">Google.com</a></span>
+                    <span id="position">Travel Blogger of <a href="#">Couple Travel The World</a></span>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="card-footer">
                     <span id="name">Christina Williams<br></span>
-                    <span id="position">UX Designer at <a href="#">Youtube.com</a></span>
+                    <span id="position">Founder of <a href="#">Inside the Travel Lab</a></span>
                 </div>
             </div>
         </div>
@@ -108,26 +108,26 @@
     </section>
     -->
     <section class="services" id="services" style="background-image: url(images/gray-bg.jpg)">
-        <h2 class="heading">Our <span>Services</span></h2>
+        <h2 class="heading">Our <span>Features</span></h2>
 
         <div class="services-container">
             <div class="services-box">
                 <i class="bx bx"></i>
-                <h3>Head 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="#" class="btn">Read More</a>
+                <h3>Discover a World of Diverse Destinations</h3>
+                <p>Embark on an adventure to the world's most captivating destinations with triptrove. From the bustling streets of cosmopolitan cities to the serene beauty of secluded beaches, our itineraries cover a spectrum of extraordinary places. Each destination is a unique tapestry of culture, cuisine, and natural splendor waiting to be explored.</p>
+                <a href="#" class="btn">Start planning</a>
             </div>
             <div class="services-box">
                 <i class="bx bxs"></i>
-                <h3>Head 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="#" class="btn">Read More</a>
+                <h3>Tailor-Made Itineraries for Every Traveller</h3>
+                <p>Your dream vacation, personalized to perfection. At triptrove, we believe in crafting journeys that align with your interests, schedule, and budget. Whether you seek a tranquil retreat or an adrenaline-fueled adventure, our customizable itineraries are designed to cater to your individual preferences, ensuring an experience that's as unique as you are.</p>
+                <a href="#" class="btn">Start planning</a>
             </div>
             <div class="services-box">
                 <i class="bx bx-bar"></i>
-                <h3>Head 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="#" class="btn">Read More</a>
+                <h3>Hear from Our Happy Travellers</h3>
+                <p>Don't just take our word for it. Our past travelers share their experiences of exploring the world with triptrove. Read their stories and discover why we are the preferred choice for discerning travelers.</p>
+                <a href="#" class="btn">Start planning</a>
             </div>
 
         </div>
