--- a/TripTrove/Client/Pages/Index.razor.css
+++ b/TripTrove/Client/Pages/Index.razor.css
@@ -81,7 +81,7 @@ section {
 .home-img img{
     width: 35vw;
     animation: floatImage 4s ease-in-out infinite;
-    z-index: 100;
+    border-radius: 1rem;
 }
 
 @keyframes floatImage {
@@ -119,41 +119,6 @@ home-content h3:nth-of-type(2) {
     background-image: -ms-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
 }
 
-.home {
-    position: relative;
-}
-
-    .home:after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        height: 0;
-        border-right: 100vw solid #fff;
-        border-top: 200px solid transparent;
-        width: 0;
-        z-index: 0;
-    }
-
-    .home .content-bottom {
-        padding-top: 200px;
-        position: relative;
-        z-index: 1;
-    }
-
-        .home .content-bottom h2 {
-            font-size: 90px;
-            font-weight: 700;
-            color: #fff;
-            text-transform: uppercase;
-            line-height: 90px;
-        }
-
-        .home .content-bottom p {
-            color: #fff;
-            max-width: 400px;
-        }
 
 @media (max-width: 1366px) {
     .home .content-bottom {
@@ -241,6 +206,7 @@ span {
 
 .about-content h3 {
     font-size: 2.6rem;
+    margin-bottom: 2rem;
 }
 
 .about-content p {
@@ -250,6 +216,7 @@ span {
 
 .services h2 {
     margin-bottom: 5rem;
+    color: rgb(82, 81, 81);
 }
 
 .services-container {
@@ -260,15 +227,17 @@ span {
     gap: 2rem;
 }
 
-.services-container .services-box {
-    flex: 1 1 30rem;
-    background: #323946;
-    padding: 3rem 2rem 4rem;
-    border-radius: 2rem;
-    text-align: center;
-    border: .2rem solid #1f242d;
-    transition: .5s ease;
-}
+    .services-container .services-box {
+        flex: 1 1 30rem;
+        background-image: -moz-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
+        background-image: -webkit-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
+        background-image: -ms-linear-gradient(-45deg, rgb(54, 209, 220) 0%, rgb(91, 134, 229) 70%);
+        padding: 3rem 2rem 4rem;
+        border-radius: 2rem;
+        text-align: center;
+        border: .2rem solid ;
+        transition: .5s ease;
+    }
 
 .services-container .services-box:hover {
     border-color: #0ef;
