--- a/TripTrove/Client/Shared/MainLayout.razor
+++ b/TripTrove/Client/Shared/MainLayout.razor
@@ -7,7 +7,6 @@
         <NavBar />
     </NotAuthorized>
 </AuthorizeView>
-        
 <div class="page">
     <AuthorizeView>
         <Authorized>
@@ -17,6 +16,9 @@
         </Authorized>
     </AuthorizeView>
     <main>
+        <AuthorizeView>
+
+        </AuthorizeView>
         <!--<div class="top-row px-4 auth">
             <LoginDisplay />
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
