Fixed the NavBar

--- a/TripTrove/Client/Shared/NavBar.razor
+++ b/TripTrove/Client/Shared/NavBar.razor
@@ -4,8 +4,8 @@
 
     <nav class="navbar">
         <a href="#home" class="active">Home</a>
-        <a href="hello">Travel</a>
-        <a href="#services">Travel Guides</a>
+        <a href="#review">Review</a>
+        <a href="#services">Features</a>
         <a href="#portfolio">Destination</a>
         <a href="authentication/login">Login</a>
         <a href="authentication/register">Sign Up</a>
