Staff database and main page

--- a/TripTrove/Client/Pages/Index.razor
+++ b/TripTrove/Client/Pages/Index.razor
@@ -259,7 +259,7 @@
             await js.InvokeVoidAsync("initialiseStickyNavBar");
             await js.InvokeVoidAsync("initialiseToggleIconNavBar");
             await js.InvokeVoidAsync("initialiseScrollReveal");
-            await js.InvokeVoidAsync("initialiseTypedJs");
+            // await js.InvokeVoidAsync("initialiseTypedJs");
         }
     }
 
