--- a/TripTrove/Client/Shared/MainLayout.razor
+++ b/TripTrove/Client/Shared/MainLayout.razor
@@ -2,15 +2,21 @@
 @using Microsoft.AspNetCore.Components.Authorization
 
 
-        <NavBar />
+      
 <div class="page">
-    <AuthorizeView>
-        <Authorized>
-            <div class="sidebar">
-                <NavMenu />
-            </div>
-        </Authorized>
-    </AuthorizeView>
+    <header class="header">
+        <a href="#" class="logo">triptrove</a>
+        <i class='bx bx-menu' id="menu-icon"></i>
+
+        <nav class="navbar">
+            <a href="HomePage" class="active">Staff View</a>
+            <a href="#review">Review</a>
+            <a href="#services">Features</a>
+            <a href="#portfolio">Destination</a>
+            <a href="authentication/login">Login</a>
+            <a href="authentication/register">Sign Up</a>
+        </nav>
+    </header>
     <main>
         <AuthorizeView>
 
