--- a/TripTrove/Client/Pages/TravelAgent/HomePage.razor.css
+++ b/TripTrove/Client/Pages/TravelAgent/HomePage.razor.css
@@ -1,5 +1,4 @@
-﻿/* Googlefont Poppins CDN Link */
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet" >
+﻿<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet" >
 
 * {
     margin: 0;
